--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,17 @@ input {
     right: 0;
 }
 
+/* Change background header */
+.scroll-header {
+    background-color: var(--body-color);
+    box-shadow: 0 0 4px hsla(var(--hue-color), 64%, 15%, .15);
+}
+
+.scroll-header .nav__logo,
+.scroll-header .nav__toggle {
+    color: var(--title-color);
+}
+
 /*=================== HOME ===================*/
 .home__img {
     position: absolute;
