--- a/css/style.css
+++ b/css/style.css
@@ -83,282 +83,326 @@ body.dark-theme {
 
 /*================== BASE ==================*/
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    margin: var(--header-height) 0 0 0;
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    background-color: var(--body-color);
-    color: var(--text-color);
+  margin: var(--header-height) 0 0 0;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  background-color: var(--body-color);
+  color: var(--text-color);
 }
 
-h1, h2, h3 {
-    color: var(--title-color);
-    font-weight: var(--font-semi-bold);
-    font-family: var(--title-font);
+h1,
+h2,
+h3 {
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+  font-family: var(--title-font);
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-img, 
+img,
 video {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 button,
 input {
-    border: none;
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
+  border: none;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 input {
-    outline: none;
+  outline: none;
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .section {
-    padding: 4.5rem 0 2.5rem;
+  padding: 4.5rem 0 2.5rem;
 }
 
 .section__title {
-    font-size: var(--h2-font-size);
-    color: var(--title-color);
-    text-align: center;
-    text-transform: capitalize;
-    margin-bottom: var(--mb-2);
+  font-size: var(--h2-font-size);
+  color: var(--title-color);
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: var(--mb-2);
 }
 
 .container {
-    max-width: 968px;
-    margin-left: var(--mb-1);
-    margin-right: var(--mb-1);
+  max-width: 968px;
+  margin-left: var(--mb-1);
+  margin-right: var(--mb-1);
 }
 
 .grid {
-    display: grid;
-    gap: 1.5rem;
+  display: grid;
+  gap: 1.5rem;
 }
 
 /*================= HEADER =================*/
 .header {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: var(--z-fixed);
-    background-color: transparent;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  background-color: transparent;
 }
 
 /*=================== NAV ===================*/
 .nav {
-    height: var(--header-height);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav__logo,
 .nav__toggle {
-    color: var(--white-color);
+  color: var(--white-color);
 }
 
 .nav__logo {
-    font-weight: var(--font-semi-bold);
+  font-weight: var(--font-semi-bold);
 }
 
 .nav__toggle {
-    font-size: 1.2rem;
-    cursor: pointer;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
 
 .nav__menu {
-    position: relative;
+  position: relative;
 }
 
 @media screen and (max-width: 767px) {
-    .nav__menu {
-        position: fixed;
-        background-color: var(--body-color);
-        top: 0;
-        right: -100%;
-        width: 70%;
-        height: 100%;
-        box-shadow: -1px 0 4px hsla(var(--hue-color), 64%, 15%, .15);
-        padding: 3rem;
-        transition: .4s;
-    }
+  .nav__menu {
+    position: fixed;
+    background-color: var(--body-color);
+    top: 0;
+    right: -100%;
+    width: 70%;
+    height: 100%;
+    box-shadow: -1px 0 4px hsla(var(--hue-color), 64%, 15%, 0.15);
+    padding: 3rem;
+    transition: 0.4s;
+  }
 }
 
 .nav__list {
-    display: flex;
-    flex-direction: column;
-    row-gap: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2.5rem;
 }
 
 .nav__link {
-    color: var(--text-color-light);
-    font-weight: var(--font-semi-bold);
-    text-transform: uppercase;
+  color: var(--text-color-light);
+  font-weight: var(--font-semi-bold);
+  text-transform: uppercase;
 }
 
 .nav__link:hover {
-    color: var(--text-color);
+  color: var(--text-color);
 }
 
 .nav__close {
-    position: absolute;
-    top: .75rem;
-    right: 1rem;
-    font-size: 1.5rem;
-    color: var(--title-color);
-    cursor: pointer;
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  font-size: 1.5rem;
+  color: var(--title-color);
+  cursor: pointer;
 }
 
 /* show menu */
 .show-menu {
-    right: 0;
+  right: 0;
 }
 
-/* Change background header */
+/* Change header background */
 .scroll-header {
-    background-color: var(--body-color);
-    box-shadow: 0 0 4px hsla(var(--hue-color), 64%, 15%, .15);
+  background-color: var(--body-color);
+  box-shadow: 0 0 4px hsla(var(--hue-color), 64%, 15%, 0.15);
 }
 
 .scroll-header .nav__logo,
 .scroll-header .nav__toggle {
-    color: var(--title-color);
+  color: var(--title-color);
 }
 
 /*=================== HOME ===================*/
 .home__img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    object-position: 83%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  object-position: 83%;
 }
 
 .home__container {
-    position: relative;
-    height: calc(100vh - var(--header-height));
-    align-content: center;
-    row-gap: 3rem;
+  position: relative;
+  height: calc(100vh - var(--header-height));
+  align-content: center;
+  row-gap: 3rem;
 }
 
 .home__data-subtitle,
 .home__data-title,
 .home__social-link,
 .home__info {
-    color: var(--white-color);
+  color: var(--white-color);
 }
 
 .home__data-subtitle {
-    display: block;
-    font-weight: var(--font-semi-bold);
-    margin-bottom: var(--mb-0-75);
+  display: block;
+  font-weight: var(--font-semi-bold);
+  margin-bottom: var(--mb-0-75);
 }
 
 .home__data-title {
-    font-size: var(--biggest-font-size);
-    font-weight: var(--font-medium);
-    margin-bottom: var(--mb-2-5);
+  font-size: var(--biggest-font-size);
+  font-weight: var(--font-medium);
+  margin-bottom: var(--mb-2-5);
 }
 
 .home__social {
-    display: flex;
-    flex-direction: column;
-    row-gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
 }
 
 .home__social-link {
-    font-size: 1.2rem;
-    width: max-content;
+  font-size: 1.2rem;
+  width: max-content;
 }
 
 .home__info {
-    background-color: var(--first-color);
-    display: flex;
-    padding: 1.5rem 1rem;
-    align-items: center;
-    column-gap: .5rem;
-    position: absolute;
-    right: 0;
-    bottom: 1rem;
-    width: 228px;
+  background-color: var(--first-color);
+  display: flex;
+  padding: 1.5rem 1rem;
+  align-items: center;
+  column-gap: 0.5rem;
+  position: absolute;
+  right: 0;
+  bottom: 1rem;
+  width: 228px;
 }
 
 .home__info-title {
-    display: block;
-    font-size: var(--small-font-size);
-    font-weight: var(--font-semi-bold);
-    margin-bottom: var(--mb-0-75);
+  display: block;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-semi-bold);
+  margin-bottom: var(--mb-0-75);
 }
 
 .home__info-button {
-    font-size: var(--smaller-font-size);
+  font-size: var(--smaller-font-size);
 }
 
 .home__info-overlay {
-    overflow: var(--img-hidden);
+  overflow: var(--img-hidden);
 }
 
 .home__info-img {
-    width: 145px;
-    transition: var(--img-transition);
+  width: 145px;
+  transition: var(--img-transition);
 }
 
 .home__info-img:hover {
-    transform: var(--img-scale);
+  transform: var(--img-scale);
 }
 
 /*=================== BUTTONS ===================*/
 .button {
-    display: inline-block;
-    background-color: var(--first-color);
-    color: var(--white-color);
-    padding: 1rem 2rem;
-    font-weight: var(--font-semi-bold);
-    transition: .3s;
+  display: inline-block;
+  background-color: var(--first-color);
+  color: var(--white-color);
+  padding: 1rem 2rem;
+  font-weight: var(--font-semi-bold);
+  transition: 0.3s;
 }
 
 .button:hover {
-    background-color: var(--first-color-alt);
+  background-color: var(--first-color-alt);
 }
 
 .button--flex {
-    display: flex;
-    align-items: center;
-    column-gap: .25rem;
+  display: flex;
+  align-items: center;
+  column-gap: 0.25rem;
 }
 
 .button--link {
-    background: none;
-    padding: 0;
+  background: none;
+  padding: 0;
 }
 
 .button--link:hover {
-    background: none;
+  background: none;
+}
+
+/*=================== ABOUT ===================*/
+.about__data {
+  text-align: center;
+}
+
+.about__container {
+  row-gap: 2.5rem;
+}
+
+.about__description {
+  margin-bottom: var(--mb-2);
+}
+
+.about__img {
+  display: flex;
+  column-gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.about__img-overlay {
+    overflow: var(--img-hidden);
+}
+
+.about__img-one {
+    width: 130px;
+}
+
+.about__img-two {
+    width: 180px;
+}
+
+.about__img-one,
+.about__img-two {
+    transition: var(--img-transition);
+}
+
+.about__img-one:hover,
+.about__img-two:hover {
+    transform: var(--img-scale);
 }
