--- a/css/style.css
+++ b/css/style.css
@@ -580,7 +580,7 @@ input {
   font-size: var(--small-font-size);
 }
 
-.place__subtitle, 
+.place__subtitle,
 .place__price {
   display: block;
 }
@@ -599,7 +599,7 @@ input {
   position: absolute;
   right: 0;
   bottom: 0;
-  padding: .75rem 1rem;
+  padding: 0.75rem 1rem;
 }
 
 .place__img {
@@ -628,18 +628,35 @@ input {
 
 .subscribe__form {
   background-color: var(--input-color);
-  padding: .5rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: space-between;
 }
 
 .subscribe__input {
   width: 70%;
-  padding-right: .5rem;
+  padding-right: 0.5rem;
   background-color: var(--input-color);
   color: var(--text-color);
 }
 
 .subscribe__input::placeholder {
   color: var(--text-color);
+}
+
+/*=================== SPONSORS ===================*/
+.sponsor__container {
+  grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
+  justify-items: center;
+  row-gap: 3.5rem;
+}
+
+.sponsor__img {
+  width: 90px;
+  filter: invert(.7);
+  transition: var(--img-transition);
+}
+
+.sponsor__content:hover .sponsor__img {
+  filter: invert(.5);
 }
